Tests/test_output/Surfaces/test_smooth_surface.txt
WARNING: package sun.awt.X11 not in java.desktop
WARNING: package sun.awt.X11 not in java.desktop

ERROR: Undefined function 'gifti' for input arguments of type 'char'.

Error in gifti2surf (line 42)
g = gifti(path4gifti);
    ^^^^^^^^^^^^^^^^^
Error in test_smooth_surface (line 18)
srf = gifti2surf(path4gifti_left);
      ^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error in run (line 112)
evalin('caller', strcat(scriptStem, ';'));
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

STATUS: FAIL
